# flight-buddy

./: .env.example  .gitignore  README.md  amadeus.postman_collection.json  balances.yaml  config.yaml  pyproject.toml  requirements.txt  spec.md  test_connection.py
app/: __main__.py  models.py
flight_buddy/: __init__.py  __main__.py  auth.py  cli.py  client.py  formatter.py  models.py
src/: balances.py  cli.py  client.py  config.py  formatter.py
src/providers/: __init__.py  base.py  factory.py
src/providers/amadeus/: __init__.py  adapter.py
src/providers/duffel/: __init__.py  adapter.py
src/providers/expertflyer/: __init__.py  browser.py  scraper.py
src/providers/seatsaero/: SPEC.md  __init__.py  adapter.py
src/providers/serpapi/: SPEC.md  __init__.py  adapter.py
tests/: test_cli.py
